# zmachine.rs

./: .gitignore  Cargo.toml
src/: dict.rs  execution.rs  instr.rs  lib.rs  main.rs  memory.rs  object.rs  text.rs  util.rs
src/debug/: mod.rs  parse.rs
src/decode/: mod.rs  parse.rs
src/dict/: mod.rs  parse.rs
src/exec/: mod.rs
src/exec/debug/: mod.rs  parse.rs
src/instr/: mod.rs  opcode.rs  parse.rs
src/interface/: mod.rs
src/memory/: header.rs  map.rs  mod.rs
src/memory_model/: mod.rs  object.rs
src/old/: instr.rs
src/text/: mod.rs  parse.rs
