[package]
name = "zmachine"
version = "0.1.0"
authors = ["Scott Morton <morton.scott.e@gmail.com>"]
edition = "2018"

[lib]
name = "zmachine"
path = "src/lib.rs"

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
lazy_static = "1.4"
num = "0.2"
enum_primitive = "*"
itertools = "0.8"
take-until = "0.1.0"
arrayvec = "0.5"
nom = "5"
